# co-pet

./: .env  .gitignore  .reg  README.md  apiService.js  chatbox-input-renderer.js  chatbox-input.html  chatbox-response-renderer.js  chatbox-response.html  index.html  llm.py  main.js  package.json  pet-renderer.js  pet.html  pet.py  preload.js  pyproject.toml  renderer.js  run.py  server.py  styles.css
gemini/: llm.py  prompts.py
model/: pet.js
search/: .env.example
